Revert "fix: when displaying toolbar text, the icons are not centered(#682)"
This reverts commit ac82220dc20517d4ea5dbb268b2712ba5fed022b.

--- a/packages/MdEditor/layouts/Toolbar/index.less
+++ b/packages/MdEditor/layouts/Toolbar/index.less
@@ -87,7 +87,6 @@
         list-style: none;
         user-select: none;
         text-align: center;
-        font-size: 0;
 
         &-name {
           font-size: 12px;
